--- a/style.css
+++ b/style.css
@@ -1,31 +1,176 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
+.lexend {
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
+.inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+ 
+}
+
+:root{
+    --dark-blue-main: hsl(233, 47%, 7%);
+    --dark-saturade-card:  hsl(244, 38%, 16%);
+    --soft-violet-accent: hsl(277, 64%, 61%);
+    --white: hsl(0, 0%, 100%);
+    --white-p: hsla(0, 0%, 100%, 0.75);
+    --white-stats: hsla(0, 0%, 100%, 0.6);
+    --size-large: 1.7em;
+    --size-medium-large: 1.4em;
+    --size-normal: 1em;
+    --border-radious-main: 10px;
+}
+
+
+
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
-html body{
-    width: 100%;
-    height: 100%;
-}
 
-.container{
+body{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
+    align-items: center;
+    font-size: 15px;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    text-align: center;
+    background-color: var(--dark-blue-main);
 }
 
-.content{
-    di
-    border: 2px solid black;
-    width: 60%;
-    height: 50%;
+/* main , div , section... */
 
+
+main{
+    width: 63%;
+    background-color: var(--dark-saturade-card);
+    border-radius: var(--border-radious-main);
 }
 
+.image{
+    width: 100%;
+    height: calc(37px + 27vw);
+    background-image: linear-gradient(hsla(277, 74%, 35%, 0.5), hsla(277, 74%, 35%, 0.5)),  url("./images/image-header-mobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: var(--border-radious-main) var(--border-radious-main) 0 0;
+}
 
+section{
+    padding: 1.5rem;
+}
 
-.img img{
+.result{
+    margin-bottom: 0;
     
-    width: 50%
+}
+
+h1, .result p{
+    color: var(--white);
+ }
+
+ h1{
+    margin-top: 0;
+    font-weight: 700;
+    font-size: var(--size-large);
+ }
+
+
+ h2{
+    font-family: "Lexend Deca", sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--white-stats);
+    font-size: var(--size-normal);
+    margin-top: 0;
+}
+
+.queries{
+    margin-bottom: 0;
+}
+
+p{
+    color: var(--white-p);
+    font-size: var(--size-normal);
+    font-weight: 400;
+    
+}
+
+.result p {
+    margin-bottom: 0.3rem;
+    font-weight: 700;
+    font-size: var(--size-medium-large);
+}
+
+span{
+    color: var(--soft-violet-accent);
+}
+ 
+@media (min-width: 800px){
+    main{
+        display: flex;
+        flex-direction: row-reverse;
+        text-align: left;
+        width: 94%;
+        max-width: 990px;
+        --size-normal: 0.92em
+    }
+    .image{
+        width: 50%;
+        background-image: linear-gradient(hsla(277, 74%, 35%, 0.5), hsla(277, 74%, 35%, 0.5)),  url("./images/image-header-desktop.jpg");
+        height: calc(37px + 40vw);
+    }
+
+    section{
+        width: 50%;
+        padding: 2rem 5rem 2rem 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .result{
+        display: flex;
+        justify-content: space-between;
+        
+    }
+    h1{
+        margin-top: 0;
+    }
+    h2{
+        margin-bottom: 0;
+    }
+    .text p {
+        line-height: 1.5;
+    }
+} 
+
+@media (min-width: 950px) {
+    main{
+        width: 94%;
+    }
+    .image{
+        max-height: 350px;
+        border-radius: 0 var(--border-radious-main)  var(--border-radious-main) 0;
+    }
+    section{
+        padding: 3rem 8rem 3rem 3rem;
+        justify-content: space-between;
+    }
+ 
 }
